[project]
name = "my_portscanner"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "RyosukeDTomita", email = "d310151c2@gmail.com" }
]
dependencies = [
    "pytest>=8.3.2",
    "argparse>=1.4.0",
    "tomli>=2.0.1",
    "pytz>=2024.1",
    "freezegun>=1.5.1",
    "pip>=24.2",
    "scapy>=2.5.0",
]
readme = "README.md"
license = {file = "LICENSE"}


requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_portscanner"]

[project.scripts]
my_portscanner = "my_portscanner:main"
